fix(topbar): remove 64px gap by zeroing MudBlazor --mud-appbar-height
The scoped ::deep override on .mud-main-content didn't work due to
Blazor CSS isolation attribute mismatch. Moved the fix to global
site.css by setting --mud-appbar-height: 0px on .mud-layout since
we use a custom topbar instead of MudAppBar.

--- a/src/Modules/Warehouse/LKvitai.MES.Modules.Warehouse.WebUI/Shared/MainLayout.razor.css
+++ b/src/Modules/Warehouse/LKvitai.MES.Modules.Warehouse.WebUI/Shared/MainLayout.razor.css
@@ -6,10 +6,6 @@
     top: 0;
 }
 
-::deep .mud-main-content {
-    padding-top: 0 !important;
-}
-
 .app-topbar {
     min-height: 56px;
     display: flex;
