--- a/src/Modules/Warehouse/LKvitai.MES.Modules.Warehouse.WebUI/wwwroot/css/site.css
+++ b/src/Modules/Warehouse/LKvitai.MES.Modules.Warehouse.WebUI/wwwroot/css/site.css
@@ -4,6 +4,11 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+/* MudBlazor reserves 64px padding for MudAppBar — we use a custom topbar instead */
+.mud-layout {
+    --mud-appbar-height: 0px;
+}
+
 h1:focus {
     outline: none;
 }
